--- a/index.html
+++ b/index.html
@@ -43,23 +43,25 @@
         <main class="chats">
             <ul class="chats__list">
                 <li class="chats__chat chat">
-                    <div class="chat__column">
-                        <img
-                            class="chat__avatar g-avatar"
-                            src="C:\Users\thddn\Desktop\NomadCoder\kakao-clone-v2-master\kakao-clone-v2-master\images\avatar.jpg"
-                        />
-                        <div class="chat__content">
-                            <span class="chat__username">
-                                Lynn
-                            </span>
-                            <span class="chat__preview">
-                                Going home!
-                            </span>
+                    <a href="chat.html">
+                        <div class="chat__column">
+                            <img
+                                class="chat__avatar g-avatar"
+                                src="C:\Users\thddn\Desktop\NomadCoder\kakao-clone-v2-master\kakao-clone-v2-master\images\avatar.jpg"
+                            />
+                            <div class="chat__content">
+                                <span class="chat__username">
+                                    Lynn
+                                </span>
+                                <span class="chat__preview">
+                                    Going home!
+                                </span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="chat__column">
-                        <span class="chat__timestamp">Yesterday</span>
-                    </div>
+                        <div class="chat__column">
+                            <span class="chat__timestamp">Yesterday</span>
+                        </div>
+                    </a>
                 </li>
             </ul>
         </main>
