--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <title>Chats | Kakao Clone</title>
     </head>
     <body>
+        <!-- 휴대폰 상단에 표시되는 스테이터스바를 나타내기 위한 <div> 박스 -->
         <div class="status-bar">
             <div class="status-bar__column">
                 <span class="status-bar__clock">13:54</span>
