--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             src="https://kit.fontawesome.com/ec345c50b8.js"
             crossorigin="anonymous"
         ></script>
+        <link rel="stylesheet" href="css/styles.css" />
         <title>Chats | Kakao Clone</title>
     </head>
     <body>
