--- a/chat.html
+++ b/chat.html
@@ -47,7 +47,7 @@
                 <li class="incoming-message message">
                     <img
                         src="images/avatar.jpg"
-                        class="g-avatar message__avatar"
+                        class="m-avatar message__avatar"
                     />
                     <div class="message__content">
                         <span class="message__author">
