--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/styles.css" />
         <title>Chats | Kakao Clone</title>
     </head>
+
     <body>
         <!-- 휴대폰 상단에 표시되는 스테이터스바를 나타내기 위한 <div> 박스 -->
         <div class="status-bar">
@@ -46,22 +47,26 @@
             <ul class="chats__list">
                 <li class="chats__chat chat">
                     <a href="chat.html">
-                        <div class="chat__column">
-                            <img
-                                class="chat__avatar g-avatar"
-                                src="C:\Users\thddn\Desktop\NomadCoder\kakao-clone-v2-master\kakao-clone-v2-master\images\avatar.jpg"
-                            />
-                            <div class="chat__content">
-                                <span class="chat__username">
-                                    Lynn
-                                </span>
-                                <span class="chat__preview">
-                                    Going home!
+                        <div class="chats__chat friend friend--lg">
+                            <div class="friend__column">
+                                <img
+                                    src="images/avatar.jpg"
+                                    class="m-avatar friend__avatar"
+                                />
+                                <div class="friend__content">
+                                    <span class="friend__name">
+                                        Lynn
+                                    </span>
+                                    <span class="friend__bottom-text">
+                                        Going home!
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="friend__column">
+                                <span class="chat__timestamp">
+                                    March 8
                                 </span>
                             </div>
-                        </div>
-                        <div class="chat__column">
-                            <span class="chat__timestamp">Yesterday</span>
                         </div>
                     </a>
                 </li>
@@ -76,6 +81,7 @@
                 </li>
                 <li class="nav__list-item">
                     <a href="index.html" class="nav__list-link">
+                        <div class="nav__badge">8</div>
                         <i class="fas fa-comment"></i>
                     </a>
                 </li>
